--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>He forced me to Put pineapple on pizza!</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">17 minutes ago</div>
+                        <div class="date">35 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Can You Guess The Link?</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - What to Do When You Are Not Meditating</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -339,9 +339,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=y_Xtn4qqsuE" target="_blank">
-                    <img src="https://i.ytimg.com/vi/y_Xtn4qqsuE/mqdefault.jpg" alt="Get Busy Living or Get Busy Dying | The Philosophy of The Shawshank Redemption">
+                    <img src="https://i.ytimg.com/vi/y_Xtn4qqsuE/mqdefault.jpg" alt="The Hidden Philosophy of The Shawshank Redemption">
                     <div class="video-info">
-                        <h3>Get Busy Living or Get Busy Dying | The Philosophy of The Shawshank Redemption</h3>
+                        <h3>The Hidden Philosophy of The Shawshank Redemption</h3>
                         <div class="channel">Einzelgänger</div>
                         <div class="date">Yesterday</div>
                     </div>
@@ -563,7 +563,7 @@
                     <div class="video-info">
                         <h3>Algo Trading - What Verified Champion Trader Kevin Davey is Trading in November 2025</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1058,7 +1058,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Right Now (Lyric Video)</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5807,7 +5807,7 @@
                         <div class="video-info">
                             <h3>Algo Trading - What Verified Champion Trader Kevin Davey is Trading in November 2025</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7916,7 +7916,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - What to Do When You Are Not Meditating</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7978,9 +7978,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=y_Xtn4qqsuE" target="_blank">
-                        <img src="https://i.ytimg.com/vi/y_Xtn4qqsuE/mqdefault.jpg" alt="Get Busy Living or Get Busy Dying | The Philosophy of The Shawshank Redemption">
+                        <img src="https://i.ytimg.com/vi/y_Xtn4qqsuE/mqdefault.jpg" alt="The Hidden Philosophy of The Shawshank Redemption">
                         <div class="video-info">
-                            <h3>Get Busy Living or Get Busy Dying | The Philosophy of The Shawshank Redemption</h3>
+                            <h3>The Hidden Philosophy of The Shawshank Redemption</h3>
                             <div class="channel">Einzelgänger</div>
                             <div class="date">Yesterday</div>
                         </div>
@@ -9391,7 +9391,7 @@
                         <div class="video-info">
                             <h3>He forced me to Put pineapple on pizza!</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">17 minutes ago</div>
+                            <div class="date">35 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10228,7 +10228,7 @@
                         <div class="video-info">
                             <h3>Can You Guess The Link?</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10481,7 +10481,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Right Now (Lyric Video)</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
