--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>He forced me to Put pineapple on pizza!</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">35 minutes ago</div>
+                        <div class="date">49 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>The root of human suffering and what true forgiveness reveals</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Performance Update - Strategies in "11 AI Inspired Algo Trading Strategies" Book</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AMONG US BUT THE IMPOSTORS ROLE UPGRADES WITH EVERY KILL</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -453,7 +453,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Right Now (Live From LA)</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5752,7 +5752,7 @@
                         <div class="video-info">
                             <h3>Performance Update - Strategies in "11 AI Inspired Algo Trading Strategies" Book</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7894,7 +7894,7 @@
                         <div class="video-info">
                             <h3>The root of human suffering and what true forgiveness reveals</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9391,7 +9391,7 @@
                         <div class="video-info">
                             <h3>He forced me to Put pineapple on pizza!</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">35 minutes ago</div>
+                            <div class="date">49 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10239,7 +10239,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AMONG US BUT THE IMPOSTORS ROLE UPGRADES WITH EVERY KILL</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10327,7 +10327,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Right Now (Live From LA)</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
