--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>How we made a profitable Bitcoin strategy using ChatGPT</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">7 minutes ago</div>
+                        <div class="date">26 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>VIKKSTAR FIRST MAINSTAGE PERFORMANCE 🤯 #edm #vikkstar #sidemen #festival #dance #dancemusic</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">19 minutes ago</div>
+                        <div class="date">38 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Once You Taste Silence, You Cannot Be Without It | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">20 minutes ago</div>
+                        <div class="date">39 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Exploring Transmutation of Energy</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Are You Doing What Truly Matters to You? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Back Here Again (Live From LA)</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -288,7 +288,7 @@
                     <div class="video-info">
                         <h3>Crushing Time with Sadhana | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -299,7 +299,7 @@
                     <div class="video-info">
                         <h3>Arthur, Bach & Arthur Visit George at Strictly!🥹</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -629,7 +629,7 @@
                     <div class="video-info">
                         <h3>The Hidden Philosophy of The Shawshank Redemption</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -640,7 +640,7 @@
                     <div class="video-info">
                         <h3>ArthurTV vs Rude Waitress😭</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1817,7 +1817,7 @@
                     <div class="video-info">
                         <h3>Sidemen’s Biggest Clutch!</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5741,7 +5741,7 @@
                         <div class="video-info">
                             <h3>How we made a profitable Bitcoin strategy using ChatGPT</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">7 minutes ago</div>
+                            <div class="date">26 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7894,7 +7894,7 @@
                         <div class="video-info">
                             <h3>Once You Taste Silence, You Cannot Be Without It | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">20 minutes ago</div>
+                            <div class="date">39 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7916,7 +7916,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Exploring Transmutation of Energy</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7927,7 +7927,7 @@
                         <div class="video-info">
                             <h3>Are You Doing What Truly Matters to You? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7960,7 +7960,7 @@
                         <div class="video-info">
                             <h3>Crushing Time with Sadhana | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8103,7 +8103,7 @@
                         <div class="video-info">
                             <h3>The Hidden Philosophy of The Shawshank Redemption</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10228,7 +10228,7 @@
                         <div class="video-info">
                             <h3>VIKKSTAR FIRST MAINSTAGE PERFORMANCE 🤯 #edm #vikkstar #sidemen #festival #dance #dancemusic</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">19 minutes ago</div>
+                            <div class="date">38 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10239,7 +10239,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Back Here Again (Live From LA)</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10261,7 +10261,7 @@
                         <div class="video-info">
                             <h3>Arthur, Bach & Arthur Visit George at Strictly!🥹</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10371,7 +10371,7 @@
                         <div class="video-info">
                             <h3>ArthurTV vs Rude Waitress😭</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10745,7 +10745,7 @@
                         <div class="video-info">
                             <h3>Sidemen’s Biggest Clutch!</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
